--- a/tempodacrianca.html
+++ b/tempodacrianca.html
@@ -238,7 +238,7 @@
 
 <div class="jumbotron">
     <div>
-      <img src="imagens/logo2.png" class="img">
+      <img src="imagens/Logo2.png" class="img">
     </div>
 </div>
 
