--- a/tempodacrianca.html
+++ b/tempodacrianca.html
@@ -33,8 +33,8 @@
   }  
   .jumbotron {
     background-image: url(imagens/Fundo.jpg);
-    width: 10;
-    height: 80;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center 
@@ -238,7 +238,7 @@
 
 <div class="jumbotron">
     <div>
-      <img src="imagens/Logo2.png" class="img">
+      <img src="imagens/Logo2.png" class="img" width="100%" height="100%">
     </div>
 </div>
 
